--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,7 +25,7 @@ header {
     gap: 0.8rem;
     position: absolute;
     left: -3rem;
-    bottom: 3rem;
+    bottom: 10rem;
 }
 
 .header__socials::after{
@@ -39,24 +39,28 @@ header {
 .me{
     background: linear-gradient(var(--color-primary), transparent);
     width: 22rem;
-    height: 30rem;
+    height: 22rem;
     position: absolute;
     left: calc(50% - 11rem);
     margin-top: 4rem;
     margin-bottom: 4rem;
     border-radius: 12rem 12rem 12rem 12rem;
     overflow: hidden;
-    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    transition: var(--transition);
+}
+
+.me:hover {
+    transform: scale(1.05);
 }
 
 /* ============================ SCROLL DOWN =============================== */
 .scroll__down{
     position: absolute;
     right: -2.3rem;
-    bottom: 5rem;
+    bottom: 12rem;
     transform: rotate(90deg);
     font-weight: 300;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 /* ===================== MEDIA QUERIES (MEDIUM DEVICES) ========================= */
