--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@
 }
 
 :root{
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-bg: #1d1d1d;
+    --color-bg-variant: #333333;
+    --color-primary: #26ff88;
+    --color-primary-variant: rgba(38, 255, 175, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
