--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,15 @@ img {
     object-fit: cover;
 }
 
+.loading {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    left: 45%;
+    top: 40%;
+}
+
 /* ===================== MEDIA QUERIES (MEDIUM DEVICES) ========================= */
 @media screen and (max-width: 1024px){
     .container {
