--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -47,6 +47,14 @@
     transition: var(--transition);
 }
 
+.lastSlide {
+    text-align: center;
+    margin-top: 18rem;
+    width: 100%;
+    height: 100%;
+    font-size: 1.6rem;
+}
+
 .portfolio__Swiper__Image__AR:hover {
     transform: scale(1.1);
 }
