--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,10 @@ img {
     section {
         margin-top: 6rem;
     }
+
+    .loading {
+        left: 40%;
+    }
 }
 
 /* ===================== MEDIA QUERIES (SMALL DEVICES) ========================= */
@@ -143,5 +147,9 @@ img {
 
     section > h2{
         margin-bottom: 2rem;
+    }
+
+    .loading {
+        left: 28%;
     }
 }
