--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -6,6 +6,14 @@
     justify-items: center;
 }
 
+.portfolio__image__container__wide {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+    justify-items: center;
+}
+
 .portfolio__Swiper {
     background: var(--color-bg-variant);
     border-radius: 2rem;
@@ -108,6 +116,10 @@
         grid-template-columns: 1fr 1fr;
         gap: 1.2rem;
     }
+
+    .portfolio__image__container__wide {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* ===================== MEDIA QUERIES (SMALL DEVICES) ========================= */
@@ -115,5 +127,23 @@
     .portfolio__container {
         grid-template-columns: 1fr;
         gap: 1rem;
+    }
+
+    .portfolio__image__container__wide {
+        grid-template-columns: 1fr;
+    }
+
+    .portfolio__image__container {
+        grid-template-columns: 1fr;
+    }
+
+    .portfolio__Swiper__Image__Legends {
+        width: 20rem;
+        height: 10rem;
+    }
+    
+    .portfolio__Swiper__Image__Blender {
+        width: 20rem;
+        height: 10rem;
     }
 }
