--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,8 +6,34 @@ header {
 
 .header__container {
     text-align: center;
+    align-items: center;
     height: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.header_animation_container{
+    background: linear-gradient(var(--color-primary), transparent);
+    width: 50rem;
+    height: 25rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    border-radius: 1rem 1rem 1rem 1rem;
+    border: 1px solid var(--color-primary);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.header_inside_animation_container{
+    position: absolute;
+    text-align: center;
+    top: calc(53%);
+}
+
+.header_animation_text{
+    font-size: 2rem;
 }
 
 /*======================= CTA =================*/
@@ -39,12 +65,11 @@ header {
 /* ============================ ME IMAGE =============================== */
 .me{
     background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 22rem;
+    width: 13rem;
+    height: 13rem;
     position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+    left: calc(1%);
+    border: 3px solid var(--color-primary);
     border-radius: 12rem 12rem 12rem 12rem;
     overflow: hidden;
     transition: var(--transition);
@@ -73,14 +98,21 @@ header {
         width: 12rem;
         height: 12rem;
         left: calc(50% - 6rem);
+        top: calc(40%);
         margin-top: 2.5rem;
+    }
+    .header_animation_container{
+        display: none;
+    }
+    .header_animation_text{
+        display: none;
     }
 }
 
 /* ===================== MEDIA QUERIES (SMALL DEVICES) ========================= */
 @media screen and (max-width: 600px){
     header{
-        height: 100vh;
+        height: 70vh;
     }
 
     .header__socials,
