--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,33 @@
+/* Class Utilities */
+.animate--delay-025s{
+    animation-delay: 0.25s;
+}
+
+.animate--delay-05s{
+    animation-delay: 0.5s;
+}
+
+/* Animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
+    animation-timing-function: ease;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
@@ -35,6 +65,7 @@
     border-radius: 1rem;
     padding: 2rem;
     text-align: center;
+    opacity: 0;
     transition: var(--transition);
 }
 
@@ -43,6 +74,12 @@
     border-color: var(--color-primary-variant);
     cursor: default;
 }
+
+/* .about__card.fade-in {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+} */
 
 .about__icon {
     color: var(--color-primary);
