Added more animations / Removed background tiles

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -25,6 +25,8 @@
     animation-timing-function: ease;
     animation-duration: 1s;
     animation-fill-mode: forwards;
+    animation-timeline: view();
+    animation-range: entry;
 }
 
 
