--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,16 @@
+@media (prefers-reduced-motion: no-preference){
+    /* animations */
+    @keyframes fade-in{
+        from {scale: 0.8; opacity: 0;}
+        to {scale: 1; opacity: 1;}
+    }
+
+    @keyframes slide-in{
+        from {transform: translateX(500px);}
+        to {transform: translateX(0);}
+    }
+}
+
 .container.contact__container {
     width : 58%;
     display: grid;
@@ -18,6 +31,12 @@
     text-align: center;
     border: 1px solid transparent;
     transition: var(--transition);
+    opacity: 0;
+    animation-name: fade-in;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-timeline: view();
+    animation-range: entry;
 }
 
 .contact__option:hover {
@@ -51,6 +70,11 @@ input, textarea {
     border: 2px solid var(--color-primary-variant);
     resize: none;
     color: var(--color-white);
+    animation-name: slide-in;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-timeline: view();
+    animation-range: entry;
 }
 
 /* ===================== MEDIA QUERIES (MEDIUM DEVICES) ========================= */
