--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,16 @@
+/* Animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .portfolio__image__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -21,6 +34,11 @@
     transition: var(--transition);
     width: 90%;
     border-color: var(--color-primary-variant);
+    animation-name: fadeIn;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-timeline: view();
+    animation-range: entry;
 }
 
 .portfolio__Swiper__Image__AR {
