Fix animation timing/delay

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -25,7 +25,7 @@
     animation-timing-function: ease;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    animation-timeline: view();
+    animation-timeline: view(y 80px);
     animation-range: entry;
 }
 
