--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,3 +1,17 @@
+/* Modal Animation */
+
+@keyframes modal-fade-in{
+    from{
+        scale: 0.8;
+        opacity: 0;
+    }
+    to{
+        scale: 1;
+        opacity: 1;
+    }
+}
+
+
 .modal, .overlay {
     width: 100vw;
     height: 100vh;
@@ -6,7 +20,6 @@
     right: 0;
     bottom: 0;
     position: fixed;
-
 }
 
 .overlay {
@@ -30,6 +43,10 @@
     padding: 2rem;
     text-align: center;
     transition: var(--transition);
+
+    animation-name: modal-fade-in;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
 }
 
 .close__modal__button {
