--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,8 +15,8 @@ header {
 
 .header_animation_container{
     background: linear-gradient(var(--color-primary), transparent);
-    width: 50rem;
-    height: 25rem;
+    width: 50vw;
+    height: 30vh;
     margin-top: 4rem;
     margin-bottom: 4rem;
     border-radius: 1rem 1rem 1rem 1rem;
@@ -25,12 +25,13 @@ header {
     display: flex;
     justify-content: center;
     vertical-align: middle;
+    /* aspect-ratio: 16 / 9; */
 }
 
 .header_inside_animation_container{
     position: absolute;
     text-align: center;
-    top: calc(50%);
+    top: calc(57vh);
 }
 
 .header_animation_text{
@@ -51,8 +52,8 @@ header {
     align-items: center;
     gap: 0.8rem;
     position: absolute;
-    left: -3rem;
-    bottom: 15rem;
+    left: -2vw;
+    bottom: 40vh;
     font-size: 1.3rem;
 }
 
@@ -66,8 +67,8 @@ header {
 /* ============================ ME IMAGE =============================== */
 .me{
     background: linear-gradient(var(--color-primary), transparent);
-    width: 13rem;
-    height: 13rem;
+    width: 11rem;
+    height: 11rem;
     position: absolute;
     left: calc(1%);
     border: 3px solid var(--color-primary);
@@ -90,6 +91,12 @@ header {
     font-size: 1.1rem;
 }
 
+/* @media screen and (max-width: 1920px) and (max-height: 1080px){
+    header {
+        height: 100vh;
+    }
+} */
+
 /* ===================== MEDIA QUERIES (MEDIUM DEVICES) ========================= */
 @media screen and (max-width: 1024px){
     header{
@@ -97,8 +104,8 @@ header {
     }
     .me{
         position: relative;
-        width: 12rem;
-        height: 12rem;
+        width: 22vh;
+        height: 22vh;
         margin-top: 10%;
         /* left: calc(50% - 6rem);
         top: calc(40%); */
@@ -115,7 +122,7 @@ header {
 /* ===================== MEDIA QUERIES (SMALL DEVICES) ========================= */
 @media screen and (max-width: 600px){
     header{
-        height: 65%;
+        height: 78vh;
     }
 
     .header__socials,
