--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -27,6 +27,14 @@
     justify-items: center;
 }
 
+.portfolio__image__container__wide__twoImages {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+    justify-items: center;
+}
+
 .portfolio__Swiper {
     background: var(--color-bg-variant);
     border-radius: 2rem;
@@ -54,6 +62,16 @@
     height: 16.8rem;
     overflow: hidden;
     border-radius: 2rem;
+    transition: var(--transition);
+}
+
+.portfolio__Swiper__Image__My_Vehicles {
+    width: 30rem;
+    height: 16.8rem;
+    overflow: hidden;
+    border-radius: 2rem;
+    border: 1px solid transparent;
+    border-color: var(--color-primary-variant);
     transition: var(--transition);
 }
 
@@ -86,6 +104,10 @@
 }
 
 .portfolio__Swiper__Image__Legends:hover {
+    transform: scale(1.1);
+}
+
+.portfolio__Swiper__Image__My_Vehicles:hover {
     transform: scale(1.1);
 }
 
