--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -55,6 +55,10 @@
     font-size: 0.8rem;
 }
 
+.email_extra_styling {
+    font-size: 0.8vw;
+}
+
 /*============================ FORM =============================*/
 form{
     display: flex;
@@ -84,6 +88,10 @@ input, textarea {
         grid-template-columns: 1fr;
         gap: 2rem;
     }
+
+    .email_extra_styling{
+         font-size: 0.85rem; 
+     } 
 }
 
 /* ===================== MEDIA QUERIES (SMALL DEVICES) ========================= */
