--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -27,7 +27,6 @@ header {
     justify-content: center;
     vertical-align: middle;
     align-items: center;
-    /* aspect-ratio: 16 / 9; */
 }
 
 .header_inside_animation_container{
@@ -87,18 +86,12 @@ header {
 /* ============================ SCROLL DOWN =============================== */
 .scroll__down{
     position: absolute;
-    right: -2.3rem;
-    bottom: 17rem;
+    right: -2vw;
+    bottom: 45vh;
     transform: rotate(90deg);
     font-weight: 300;
     font-size: 1.1rem;
 }
-
-/* @media screen and (max-width: 1920px) and (max-height: 1080px){
-    header {
-        height: 100vh;
-    }
-} */
 
 /* ===================== MEDIA QUERIES (MEDIUM DEVICES) ========================= */
 @media screen and (max-width: 1024px){
